Update due to change of contest.ts
